# AoC

./: .gitignore  README.md
2020/Python/: RunAllDays.bat
2020/Python/day1/: day1.py  day1part2.py
2020/Python/day10/: day10.py  day10part2.py
2020/Python/day11/: day11.py  day11part2.py
2020/Python/day12/: day12.py  day12part2.py
2020/Python/day13/: day13.py  day13part2.py
2021/: .gitignore  CMakeLists.txt  aoc2021  build.sh  session.sh
2021/days/: day01.cpp
2021/src/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  main.cpp  makefile
2022/: .gitignore  CMakeLists.txt  Cargo.toml
2022/old/: day01.rs  day02.rs  day03.rs  day04.py  main.rs  proto.py
2022/src/: common.cpp  common.h  day01.cpp  day01.rs  day02.cpp  day02.rs  day03.cpp  day03.rs  day05.py  day06.cpp  day06input.h  day07.cpp  day08.cpp  main.cpp  main.rs
AoC2024/: AoC2024.cpp  AoC2024.h  CMakeLists.txt  Day10.cpp  Day10.h  Day12.cpp  common.cpp  common.h  day01.cpp  day01.h  day02.cpp  day02.h  day03.cpp  day03.h  day04.cpp  day04.h  day05.cpp  day05.h  day06.cpp  day06.h  day07.cpp  day07.h  day08.cpp  day08.h  day09.cpp  day09.h  day11.cpp  day11.h  day12.h  day13.cpp  day13.h
aoc25/: aoc25.cpp  aoc25.vcxproj  aoc25.vcxproj.filters  common.cpp  common.h  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  input_03.txt  input_07.txt  input_09.txt  logger.h  test_01.txt
(+40 files in other folders)
